--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,20 @@
         </dependency>
 	</dependencies>
 
+	<distributionManagement>
+		<repository>
+			<id>hertzcentral</id>
+			<name>libs-release-local</name>
+			<url>http://10.218.57.102/artifactory/libs-release-local</url>
+		</repository>
+		
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>libs-snapshot</name>
+			<url>http://10.218.57.102/artifactory/libs-release-local</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<repositories>
           <repository>
             <id>anypoint-exchange</id>
