--- a/pom.xml
+++ b/pom.xml
@@ -54,15 +54,14 @@
 
 	<distributionManagement>
 		<repository>
-			<id>hertzcentral</id>
-			<name>libs-release-local</name>
-			<url>http://10.218.57.102/artifactory/libs-release-local</url>
+			<id>central</id>
+			<name>ip-10-218-57-102-releases</name>
+			<url>https://10.218.57.102/artifactory/libs-release-local</url>
 		</repository>
-		
 		<snapshotRepository>
 			<id>snapshots</id>
-			<name>libs-snapshot</name>
-			<url>http://10.218.57.102/artifactory/libs-release-local</url>
+			<name>ip-10-218-57-102-snapshots</name>
+			<url>https://10.218.57.102/artifactory/libs-release-local</url>
 		</snapshotRepository>
 	</distributionManagement>
 
