--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
       </dependency>
 	</dependencies>
 
-	<distributionManagement>
+	<!--<distributionManagement>
 		<repository>
 			<id>hertzcentral</id>
 			
@@ -68,7 +68,7 @@
 			
 			<url>http://10.218.57.102/artifactory/libs-release-local</url>
 		</snapshotRepository>
-	</distributionManagement>
+	</distributionManagement>-->
 
 	<repositories>
           <repository>
