--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 	<name>sample-build</name>
 	
 	<parent>
-		<groupId>com.hertz.mule4</groupId>
+		<groupId>com.xtivia.mule4</groupId>
 		<artifactId>lib-parent-pom</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.0</version>
     </parent>
 
     <properties>
