--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,16 @@
 
 	<name>sample-build</name>
 	
-	<parent>
+	<!--<parent>
 		<groupId>com.xtivia.mule4</groupId>
-		<artifactId>lib-parent-pom</artifactId>
+		<artifactId>local-parent-pom</artifactId>
 		<version>1.0.0</version>
+    </parent>-->
+	
+	<parent>
+		<groupId>com.hertz.mule4</groupId>
+		<artifactId>lib-parent-pom</artifactId>
+		<version>1.0.1</version>
     </parent>
 
     <properties>
@@ -50,14 +56,10 @@
             <version>1.1.5</version>
             <classifier>mule-plugin</classifier>
         </dependency>
-		<dependency>
-			<groupId>com.hertz.mule4</groupId>
-			<artifactId>lib-common-error</artifactId>
-			<version>${hertz.common.error.version}</version>
-      </dependency>
+		
 	</dependencies>
 
-	<distributionManagement>
+	<!--<distributionManagement>
 		<repository>
 			<id>hertzcentral</id>
 			
@@ -68,7 +70,7 @@
 			
 			<url>http://10.218.57.102/artifactory/libs-release-local</url>
 		</snapshotRepository>
-	</distributionManagement>
+	</distributionManagement>-->
 
 	<repositories>
           <repository>
