--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.mycompany</groupId>
 	<artifactId>sample-build</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.1-master-1</version>
     <packaging>mule-application</packaging>
 
 	<name>sample-build</name>
