--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 				<configuration>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.8.2</version>
+			</plugin>
 		</plugins>
 	</build>
 
