--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 				<configuration>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.6.1</version>
+			</plugin>
 		</plugins>
 	</build>
 
