--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,17 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>sample-build</artifactId>
+	<artifactId>okc-sample-build</artifactId>
     <version>1.0.0</version>
     <packaging>mule-application</packaging>
 
 	<name>sample-build</name>
 	
-	<!--<parent>
+	<parent>
 		<groupId>com.hertz.mule4</groupId>
 		<artifactId>lib-parent-pom</artifactId>
 		<version>1.0.1</version>
-</parent>-->
+</parent>
 
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
