--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
 
 	<name>sample-build</name>
 	
-	<parent>
+	<!--<parent>
 		<groupId>com.hertz.mule4</groupId>
 		<artifactId>lib-parent-pom</artifactId>
 		<version>1.0.1</version>
-</parent>
+</parent>-->
 
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
