--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.6.1</version>
 			</plugin>
+			<plugin>
+            			<groupId>org.apache.maven.plugins</groupId>
+            			<artifactId>maven-deploy-plugin</artifactId>
+            			<version>2.8.2</version>
+            		<configuration>
+              			<skip>true</skip>
+            		</configuration>
+          		</plugin>
 		</plugins>
 	</build>
 
