--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,10 @@
 		<app.runtime>4.2.1</app.runtime>
 		<mule.maven.plugin.version>3.2.7</mule.maven.plugin.version>
 	</properties>
-
+	
+	<profiles>
+	<profile>
+      <id>onPremise</id>
 	<build>
 		<plugins>
 			<plugin>
@@ -66,6 +69,8 @@
           		</plugin>
 		</plugins>
 	</build>
+	</profile>
+	</profiles>
 
 	<dependencies>
         <dependency>
